--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgb(5, 13, 53);
+            background: rgb(3, 12, 44);
             height: 50px;
             object-fit: cover;
             z-index: 1;
@@ -107,15 +107,15 @@
             font-size: 17px;
             padding: 16.5px 6px;
             color: #fff;
-            background: inherit;
+            background: inherit; 
             border: none;
         }
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
  .Photography-content {
@@ -186,9 +186,9 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .Sport-content {
@@ -260,9 +260,9 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
                 }
 
         .Education-content {
@@ -334,9 +334,9 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .Promoter-content {
@@ -409,9 +409,9 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .Contact-content {
@@ -485,9 +485,9 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .Community-content {
@@ -560,9 +560,9 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .TikiYiki-content {
@@ -635,9 +635,9 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: blue;
             cursor: pointer;
-            background: rgba(255, 255, 255, 0.073);
+            color: rgb(77, 77, 255);
+            background: rgba(255, 255, 255, 0.085);
         }
 
         .Disability-content {
