--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -187,7 +187,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -261,7 +261,7 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
                 }
 
@@ -335,7 +335,7 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -410,7 +410,7 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -486,7 +486,7 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -561,7 +561,7 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
+            color: yellow;
             background: rgba(255, 255, 255, 0.085);
         }
 
@@ -636,8 +636,8 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: rgb(77, 77, 255);
-            background: rgba(255, 255, 255, 0.085);
+            color: yellow;
+            background: rgba(255, 255, 255, 0.069);
         }
 
         .Disability-content {
@@ -6627,7 +6627,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
 
