--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(255, 255, 255, 0.092);
         }
 
  .Photography-content {
@@ -126,8 +126,8 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
 }
 
         .Photography-content a {
@@ -154,8 +154,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -200,8 +200,8 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
    }
 
         .Sport-content a {
@@ -228,8 +228,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -274,8 +274,8 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
    }
 
         .Education-content a {
@@ -302,8 +302,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -348,8 +348,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
     }
 
         .Promoter-content a {
@@ -376,8 +376,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -423,8 +423,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
  }
 
         .Contact-content a {
@@ -451,8 +451,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -499,8 +499,8 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
    } 
 
         .Community-content a {
@@ -527,8 +527,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -575,8 +575,8 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(25, 29, 50, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
    }
 
         .TikiYiki-content a {
@@ -603,8 +603,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
@@ -649,8 +649,8 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  background: rgba(67, 78, 146, 0.994);
-  box-shadow: 0 4px 0.5rem 0.35px rgba(29, 33, 54, 0.994);
+  background: rgba(82, 99, 209, 0.994);
+  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   }
 
         .Disability-content a {
@@ -677,8 +677,8 @@
             padding: 10px;
             height: 36px;
             text-align: center;
-            background-color: rgb(113, 138, 240);
-            color: darkblue;
+            background-color: rgba(154, 167, 251, 0.994);
+            color: #000;
             border-radius: 1.5rem;
             transition: 0.18s linear;
             justify-content: center;
