--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             border: 2px solid #fff!important;
             border-radius: 0.2rem;
             margin-top: 1.25rem;
-            box-shadow: 0 -1px 0.5rem 0.1px rgba(185, 185, 185, 0.961);
+            box-shadow: 0 -1px 0.35rem 0.1px rgba(174, 174, 174, 0.961);
         }
 
         .navbar img:hover {
@@ -105,7 +105,7 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit; 
             border: none;
@@ -115,7 +115,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.092);
+            background: rgba(227, 231, 255, 0.122);
         }
 
  .Photography-content {
@@ -178,7 +178,7 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -188,7 +188,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(227, 231, 255, 0.122);
         }
 
         .Sport-content {
@@ -252,7 +252,7 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -262,7 +262,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(227, 231, 255, 0.122);
                 }
 
         .Education-content {
@@ -326,7 +326,7 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -336,7 +336,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(227, 231, 255, 0.122);
         }
 
         .Promoter-content {
@@ -401,7 +401,7 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -477,7 +477,7 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -487,7 +487,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(227, 231, 255, 0.122);
         }
 
         .Community-content {
@@ -551,7 +551,7 @@
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             margin-left: 45px;
@@ -562,7 +562,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            background: rgba(227, 231, 255, 0.122);
         }
 
         .TikiYiki-content {
@@ -627,7 +627,7 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 16.5px 6px;
+            padding: 17.5px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -637,7 +637,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: yellow;
-            background: rgba(255, 255, 255, 0.069);
+            background: rgba(227, 231, 255, 0.122);
         }
 
         .Disability-content {
@@ -3802,7 +3802,7 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            color: rgb(94, 113, 119);
+            color: #000;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -3815,17 +3815,14 @@ background: #717171;
             margin-top: -0.2rem;
             border-radius: 0.45rem;
         }
-.reader:hover{
-    color: rgb(60, 71, 75);
-    transition: 0.2s linear;
-}
+
         .disabled{
             background: #fff;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(4, 12, 53, 0.982);
+            color: rgba(7, 18, 84, 0.982);
             font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
