--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             position: sticky;
             justify-content: center;
             align-items: center;
-            border-bottom: 0.3rem solid rgba(255, 13, 13, 0.864);
+            border-bottom: 0.3rem solid rgba(255, 13, 13, 0.899);
         }
 
         
@@ -128,6 +128,11 @@
   z-index: 1;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
 }
 
         .Photography-content a {
@@ -202,6 +207,11 @@
   z-index: 1;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
    }
 
         .Sport-content a {
@@ -276,6 +286,11 @@
   align-items: center;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
    }
 
         .Education-content a {
@@ -350,6 +365,11 @@
   z-index: 1;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
     }
 
         .Promoter-content a {
@@ -425,6 +445,11 @@
   z-index: 1;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
  }
 
         .Contact-content a {
@@ -501,6 +526,11 @@
   z-index: 1;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
    } 
 
         .Community-content a {
@@ -577,6 +607,11 @@
   margin-left: 45px;
   background: rgba(86, 103, 217, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
    }
 
         .TikiYiki-content a {
@@ -651,6 +686,11 @@
   align-items: center;
   background: rgba(82, 99, 209, 0.994);
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
   }
 
         .Disability-content a {
