--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
 }
 
         .Photography-content a {
@@ -205,13 +205,13 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
    }
 
         .Sport-content a {
@@ -284,13 +284,13 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
    }
 
         .Education-content a {
@@ -363,13 +363,13 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
     }
 
         .Promoter-content a {
@@ -443,13 +443,13 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
  }
 
         .Contact-content a {
@@ -524,13 +524,13 @@
   position: absolute;
   padding: 1px;
   z-index: 1;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
    } 
 
         .Community-content a {
@@ -605,13 +605,13 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  background: rgba(86, 103, 217, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
    }
 
         .TikiYiki-content a {
@@ -684,13 +684,13 @@
   height: 120px;
   justify-content: center;
   align-items: center;
-  background: rgba(82, 99, 209, 0.994);
+  background: crimson;
   box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  border-left: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-right: 0.3rem solid rgba(211, 19, 19, 0.899);
-  border-bottom: 0.3rem solid rgba(211, 19, 19, 0.899);
+  border-left: 0.2rem solid crimson;
+  border-right: 0.2rem solid crimson;
+  border-bottom: 0.2rem solid crimson;
   }
 
         .Disability-content a {
@@ -6664,6 +6664,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
 
