--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(8, 26, 91, 0.954);
+            background: rgba(8, 26, 92, 0.957);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -105,7 +105,7 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit; 
             border: none;
@@ -114,8 +114,8 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
  .Photography-content {
@@ -183,7 +183,7 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -192,8 +192,8 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .Sport-content {
@@ -262,7 +262,7 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -271,8 +271,8 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
                 }
 
         .Education-content {
@@ -341,7 +341,7 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -350,8 +350,8 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .Promoter-content {
@@ -421,7 +421,7 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -430,8 +430,8 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(255, 255, 255, 0.085);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .Contact-content {
@@ -502,7 +502,7 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -511,8 +511,8 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .Community-content {
@@ -581,7 +581,7 @@
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             margin-left: 45px;
@@ -591,8 +591,8 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .TikiYiki-content {
@@ -662,7 +662,7 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 17.5px 6px;
+            padding: 15px 6px;
             color: #fff;
             background: inherit;
             border: none;
@@ -671,8 +671,8 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background: rgba(227, 231, 255, 0.122);
+            color: darkblue;
+            background-color: rgba(188, 197, 255, 0.994);
         }
 
         .Disability-content {
@@ -6664,5 +6664,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
