--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
  .Photography-content {
@@ -190,8 +190,8 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .Sport-content {
@@ -267,8 +267,8 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
                 }
 
         .Education-content {
@@ -344,8 +344,8 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .Promoter-content {
@@ -422,8 +422,8 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .Contact-content {
@@ -501,8 +501,8 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .Community-content {
@@ -579,8 +579,8 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .TikiYiki-content {
@@ -657,8 +657,8 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: darkblue;
-            background-color: rgba(188, 197, 255, 0.994);
+            color: #000;
+            background-color: yellow;
         }
 
         .Disability-content {
@@ -6648,5 +6648,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
