--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(8, 26, 92, 0.957);
+            background: rgba(10, 28, 93, 0.966);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -105,8 +105,8 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit; 
             border: none;
         }
@@ -114,8 +114,8 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
  .Photography-content {
@@ -127,10 +127,7 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
 }
 
         .Photography-content a {
@@ -181,8 +178,8 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -190,8 +187,8 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .Sport-content {
@@ -204,10 +201,7 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
    }
 
         .Sport-content a {
@@ -258,8 +252,8 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -267,8 +261,8 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
                 }
 
         .Education-content {
@@ -281,10 +275,7 @@
   justify-content: center;
   align-items: center;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
    }
 
         .Education-content a {
@@ -335,8 +326,8 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -344,8 +335,8 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .Promoter-content {
@@ -358,10 +349,7 @@
   align-items: center;
   z-index: 1;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
     }
 
         .Promoter-content a {
@@ -413,8 +401,8 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -422,8 +410,8 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .Contact-content {
@@ -436,10 +424,7 @@
   align-items: center;
   z-index: 1;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
  }
 
         .Contact-content a {
@@ -492,8 +477,8 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -501,8 +486,8 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .Community-content {
@@ -515,10 +500,7 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
    } 
 
         .Community-content a {
@@ -569,8 +551,8 @@
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             margin-left: 45px;
             border: none;
@@ -579,8 +561,8 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .TikiYiki-content {
@@ -594,10 +576,7 @@
   align-items: center;
   margin-left: 45px;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
    }
 
         .TikiYiki-content a {
@@ -648,8 +627,8 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
-            padding: 14.5px 6px;
-            color: #fff;
+            padding: 13.5px 6px;
+            color: #a2a2a2;
             background: inherit;
             border: none;
         }
@@ -657,8 +636,8 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #000;
-            background-color: yellow;
+            color: #fff;
+            background-color: transparent;
         }
 
         .Disability-content {
@@ -671,10 +650,7 @@
   justify-content: center;
   align-items: center;
   background: crimson;
-  box-shadow: 0 4px 0.5rem 0.35px rgba(24, 30, 64, 0.994);
-  border-left: 0.2rem solid crimson;
-  border-right: 0.2rem solid crimson;
-  border-bottom: 0.2rem solid crimson;
+  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
   }
 
         .Disability-content a {
@@ -6648,6 +6624,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
