--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(10, 28, 93, 0.966);
+            background: rgba(10, 26, 82, 0.981);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -79,7 +79,7 @@
             position: sticky;
             justify-content: center;
             align-items: center;
-            border-bottom: 0.3rem solid rgba(255, 13, 13, 0.899);
+            border-bottom: 0.37rem solid crimson;
         }
 
         
@@ -90,7 +90,7 @@
             border: 2px solid #fff!important;
             border-radius: 0.2rem;
             margin-top: 1.25rem;
-            box-shadow: 0 -1px 0.35rem 0.1px rgba(174, 174, 174, 0.961);
+            box-shadow: 0 -1px 0.35rem rgba(159, 159, 159, 0.961);
         }
 
         .navbar img:hover {
