--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(10, 26, 82, 0.981);
+            background: rgba(11, 27, 88, 0.981);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -4371,7 +4371,7 @@ function showSlides(n) {
                 </div>
             <div>
 
-                <a href="#" target="blank">Literature & Writers</a>
+                <a href="https://en.wikipedia.org/wiki/List_of_Burkinabe_writers" target="blank">Writers of Burkina Faso</a>
                 <a href="#" target="blank">Music & Musicians</a>
             </div>
 
