--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(11, 27, 88, 0.981);
+            background: rgba(10, 23, 78, 0.946);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -85,12 +85,12 @@
         
         .navbar img {
             background: #fff;
-            width: 90px;
-            height: 40px;
+            width: 70px;
+            height: 35px;
             border: 2px solid #fff!important;
             border-radius: 0.2rem;
             margin-top: 1.25rem;
-            box-shadow: 0 -1px 0.35rem rgba(159, 159, 159, 0.961);
+            box-shadow: 0 -0.5px 0.3rem rgba(159, 159, 159, 0.961);
         }
 
         .navbar img:hover {
@@ -3777,9 +3777,9 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgb(17, 41, 120)!important;
-            color: #fff;
-            border: 0.1px solid #fff;
+            background: rgb(18, 71, 170);
+            color: #cecece;
+            border: 0.1px solid #c7c7c7;
             width: 160px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
@@ -3792,10 +3792,10 @@ background: #717171;
         }
 
         .datime:hover {
-            background: rgb(26, 89, 207);
-            font-size: 15px;
+            background: rgb(31, 98, 221);
+            font-size: 15.5px;
             transition: 0.28s linear;
-            color: greenyellow
+            color: #fff;
         }
 
         .reader {
