--- a/index.html
+++ b/index.html
@@ -3777,9 +3777,9 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgb(18, 71, 170);
-            color: #cecece;
-            border: 0.1px solid #c7c7c7;
+            background: rgb(37, 67, 158);
+            color: #e7e7e7;
+            border: 0.1px solid #e8e8e8;
             width: 160px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
