--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(10, 23, 78, 0.946);
+            background: rgba(10, 24, 80, 0.978);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -114,7 +114,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -187,7 +187,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -261,7 +261,7 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
                 }
 
@@ -335,7 +335,7 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -410,7 +410,7 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -486,7 +486,7 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -561,7 +561,7 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -636,7 +636,7 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: #fff;
+            color: cyan;
             background-color: transparent;
         }
 
@@ -3777,7 +3777,7 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgb(37, 67, 158);
+            background: rgb(37, 72, 174);
             color: #e7e7e7;
             border: 0.1px solid #e8e8e8;
             width: 160px;
@@ -6624,7 +6624,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
-
 
