--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
   align-items: center;
   margin-left: 45px;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  box-shadow: 0.5px 4px 0.3rem 0.5px rgba(59, 70, 128, 0.994);
    }
 
         .TikiYiki-content a {
@@ -1847,8 +1847,7 @@
             display: grid;
             grid-template-rows: 1fr 1fr;
             width: 560px;
-            height: 260px;
-            row-gap: 5px;
+            height: 250px;
             justify-content: center;
             justify-items: center;
             background: transparent;
@@ -4643,9 +4642,10 @@ function showSlides(n) {
                             style="font-family: 'Kanit', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Climate Change Is a Big Threat To Earth And Consequently To Human-Beings. It is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes, Volcanos Around The World And Obviously Forcing People Migrations. It Is Undoubtely Clear That Climate Change Has More Endangered Earth Than Never Before. 
                                 But Human-Being Has Provoked It Through His Ceaseless Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Increasing Danger.
-                            </b> 
-                        <br> 
-                        <b style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 13px; line-height: 22px; padding: 5px;">Climate Change has neither been a story nor a comedy. It's a mad reality.
+                            </b>
+
+                        <b style="font-family: 'Kanit'; color: rgba(19, 19, 19, 0.88); font-size: 12.5px; line-height: 20px; padding: 5px;">
+                            Climate Change has neither been a story nor a comedy. It's a mad reality.
                         </b>
                         </p>
                     </div>
@@ -4653,7 +4653,9 @@ function showSlides(n) {
                     <div class="Clim2">
                                 
                           <div class="Cli">
-                         <p style="font-family: arial; font-size: 11.5px;">Earthquakes</p>
+                         <p style="font-family: arial; font-size: 11.5px;">
+                            Earthquakes
+                        </p>
                         </div> 
 
                         <div class="Cli">
