--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(10, 24, 80, 0.978);
+            background: rgba(15, 29, 85, 0.978);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -127,7 +127,8 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
 }
 
         .Photography-content a {
@@ -201,7 +202,8 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
    }
 
         .Sport-content a {
@@ -275,7 +277,8 @@
   justify-content: center;
   align-items: center;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
    }
 
         .Education-content a {
@@ -349,7 +352,8 @@
   align-items: center;
   z-index: 1;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
     }
 
         .Promoter-content a {
@@ -424,7 +428,8 @@
   align-items: center;
   z-index: 1;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
  }
 
         .Contact-content a {
@@ -500,7 +505,8 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
    } 
 
         .Community-content a {
@@ -576,7 +582,8 @@
   align-items: center;
   margin-left: 45px;
   background: crimson;
-  box-shadow: 0.5px 4px 0.3rem 0.5px rgba(59, 70, 128, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
    }
 
         .TikiYiki-content a {
@@ -650,7 +657,8 @@
   justify-content: center;
   align-items: center;
   background: crimson;
-  box-shadow: 0.5px 3px 0.3rem 0.35px rgba(69, 79, 133, 0.994);
+  border-bottom: 0.1px solid #fff;
+  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
   }
 
         .Disability-content a {
@@ -3776,9 +3784,9 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgb(37, 72, 174);
-            color: #e7e7e7;
-            border: 0.1px solid #e8e8e8;
+            background: rgb(30, 82, 236);
+            color: #efefef;
+            border: 0.1px solid #efefef;
             width: 160px;
             height: 30px;
             font-family: 'Barlow Condensed', sans-serif;
@@ -3791,10 +3799,11 @@ background: #717171;
         }
 
         .datime:hover {
-            background: rgb(31, 98, 221);
+            background: lemonchiffon;
             font-size: 15.5px;
             transition: 0.28s linear;
-            color: #fff;
+            color: coral;
+            border: 0.1px solid #fff;
         }
 
         .reader {
