--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgba(15, 29, 85, 0.978);
+            background: rgb(15, 29, 85);
             height: 52px;
             object-fit: cover;
             z-index: 1;
@@ -128,7 +128,9 @@
   z-index: 1;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
 }
 
         .Photography-content a {
@@ -203,7 +205,9 @@
   z-index: 1;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
    }
 
         .Sport-content a {
@@ -278,7 +282,9 @@
   align-items: center;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
    }
 
         .Education-content a {
@@ -353,7 +359,9 @@
   z-index: 1;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
     }
 
         .Promoter-content a {
@@ -429,7 +437,9 @@
   z-index: 1;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
  }
 
         .Contact-content a {
@@ -506,7 +516,9 @@
   z-index: 1;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
    } 
 
         .Community-content a {
@@ -583,7 +595,9 @@
   margin-left: 45px;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
    }
 
         .TikiYiki-content a {
@@ -658,7 +672,9 @@
   align-items: center;
   background: crimson;
   border-bottom: 0.1px solid #fff;
-  box-shadow: 0 4px 0.2rem 0.5px rgba(46, 64, 151, 0.994);
+  border-left: 0.1px solid #fff;
+  border-right: 0.1px solid #fff;
+  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
   }
 
         .Disability-content a {
@@ -6635,4 +6651,5 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
