--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit; 
             border: none;
         }
@@ -182,7 +182,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -259,7 +259,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -336,7 +336,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -414,7 +414,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -493,7 +493,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -570,7 +570,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             margin-left: 45px;
             border: none;
@@ -649,7 +649,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 17px;
             padding: 13.5px 6px;
-            color: #a2a2a2;
+            color: #b8b8b8;
             background: inherit;
             border: none;
         }
@@ -3800,8 +3800,8 @@ background: #717171;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgb(30, 82, 236);
-            color: #efefef;
+            background: lemonchiffon;
+            color: #000;
             border: 0.1px solid #efefef;
             width: 160px;
             height: 30px;
@@ -3818,7 +3818,7 @@ background: #717171;
             background: lemonchiffon;
             font-size: 15.5px;
             transition: 0.28s linear;
-            color: coral;
+            color: red;
             border: 0.1px solid #fff;
         }
 
@@ -6651,5 +6651,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
