--- a/index.html
+++ b/index.html
@@ -3826,7 +3826,7 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            color: #000;
+            color: #999999;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -3846,14 +3846,14 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(7, 18, 84, 0.982);
+            color: rgb(155, 155, 155);
             font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
             height: 45px;
             padding-bottom: 15px;
             cursor: pointer;
-            border-bottom: 0.5rem solid rgba(156, 179, 189, 0.738);
+            border-bottom: 0.45rem solid rgba(220, 223, 227, 0.738);
         }
 
         .disabled:hover{
@@ -6651,6 +6651,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
