--- a/index.html
+++ b/index.html
@@ -3826,7 +3826,7 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            color: #999999;
+            color: #919191;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -3846,14 +3846,16 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgb(155, 155, 155);
+            color: rgb(136, 136, 136);
             font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
             height: 45px;
             padding-bottom: 15px;
+            padding-left: 10px;
+            padding-right: 10px;
             cursor: pointer;
-            border-bottom: 0.45rem solid rgba(220, 223, 227, 0.738);
+            border-bottom: 0.45rem solid rgba(205, 209, 214, 0.738);
         }
 
         .disabled:hover{
@@ -4476,7 +4478,7 @@ function showSlides(n) {
             <a href="https://www.merriam-webster.com/dictionary/differently%20abled" target="_blank">
                
                 <div class="disabled">
-                <b> * DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY * WE ARE DIFFERENTLY ABLED *</b>
+                <b> DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY * WE ARE DIFFERENTLY ABLED </b>
                 </div>
             </a>
 
@@ -6651,6 +6653,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
